[package]
name = "ltop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
fakeit = "1.2.0"
itertools = "0.12.1"
rand = "0.8.5"
ratatui = "0.26.2"
sysinfo = "0.30.11"
tokio = { version = "1.37.0", features = ["full"] }
unicode-width = "0.1.11"
